oapi(doc): better describing for entities
